# nft_switch_smc

./: Cargo.toml
contracts/disburse/: Cargo.toml
contracts/disburse/examples/: schema.rs
contracts/disburse/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/nftswitch-dev/: .gitignore  Cargo.toml  NOTICE  terrain.config.json
contracts/nftswitch-dev/examples/: schema.rs
contracts/nftswitch-dev/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/nftswitch-dev/src/: contract.rs  error.rs  execute.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  query.rs  state.rs
