[package]
name = "nftswitch"
version = "1.0.0"
authors = ["tvl83 <tvle83@gmail.com>"]
edition = "2018"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[dependencies]
cosmwasm-std = { version = "1.1.0" }
cosmwasm-storage = { version = "1.0.0-rc.0" }
cw-storage-plus = "0.14.0"
schemars = "0.8.10"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.34" }
ecdsa = { version = "0.14.5" }
signature = { version = "1.6.0" }
getrandom = { version = "0.2.7", features = ["js"] }
cw721 = "0.13.4"
cw721-base = "0.13.4"
cw-utils = "0.13.4"
disburse = {version = "1.0.0", path = "../../packages/disburse"}

[dev-dependencies]
cosmwasm-vm = { version = "1.1.0", default-features = false, features = ["iterator"] }
cosmwasm-schema = "1.1.0"
cw-multi-test = "0.14.0"

